CSS fix for list text align

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1229,6 +1229,7 @@ body.subpage main ul {
 body.subpage main li {
   line-height: 1.5;
   margin-bottom: 1em;
+  text-align-last: left;
 }
 
 body.subpage h2 {
